--- a/index.html
+++ b/index.html
@@ -55,13 +55,31 @@
       <div class="'bodys">
        <div class="containerr">
         <div class="left_Side">
-        <div class="profileText">
+        <div class="profileText " >
             <div class="img.jpg">
-                <img src="img.jpg" class="centerr" width="310" 
-                height="310">
+                <img src="img.jpg" class="imgr" width="200" 
+                height="200">
 
             </div>
+            <br>
             <h2>Aditya Sharma R</h2>
+        </div>
+        <div class="PersonalData">
+          <h3 class="title1">Personal Data</h3>
+          <ul>
+            <li>
+              <span class="icon"></span>
+              <span class="text">Phone:   +91 8884686462</span>
+            </li>
+          </ul>
+        </div>
+        <div class="contactInfo">
+          <h3 class="title1">Contact Info</h3>
+          <ul>
+            <li>
+
+            </li>
+          </ul>
         </div>
 
 
@@ -74,4 +92,5 @@
       </div>
       </div>
 </body>
+<script src="logic.js"></script>
 </html>
