--- a/index.html
+++ b/index.html
@@ -370,10 +370,10 @@
       <div class="rightali">
         <div class="space">
         </div>
-        <button type="button" class="btn btn-secondary btn-lg" ><i class="bi bi-envelope"></i>Send Mail</button>
+        <a type="button" href="mailto:adisharma191504@gmail.com" class="btn btn-secondary btn-lg" ><i class="bi bi-envelope"></i>Send Mail</a>
         <div class="space">
         </div>
-        <button type="button" class="btn btn-primary btn-lg" ><i class="fa fa-download"></i>Download</button>
+        <a type="button" href="ADITYA SHARMA R Resume.pdf" class="btn btn-primary btn-lg" ><i class="fa fa-download"></i>Download</a>
         <div class="space">
         </div>
         
