--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             <li>I was awarded as the “Best Cadet” in NCC for the academic
               year 2016-18.
               </li>
-            <li>I participated in all India Boat Rowing competition.</li>
+            <li>I participated in All India Boat Rowing competition.</li>
             <li>I was selected for the Advance Leadership Camp (Assam).            </li>
             <li>I was selected for State level Independence Day Parade
               conducted by the Government of Karnataka.
