--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <li class="nav-item dropdown">
                 <div class="dropdown">
                   <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown link
+                    Download
                   </button>
                 
                   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
